--- a/src/screens/Header/header.css
+++ b/src/screens/Header/header.css
@@ -11,7 +11,7 @@
 	position: absolute;
 	font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-	padding: 15px 20px;
+	padding: 0 !important;
 
 }
 
